
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "isoperimetric-profile"
version = "0.1.0"
description = "Exact relative isoperimetric profile of a strictly convex polygon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]

[project.scripts]
isoperimetric-profile = "isoperimetric_profile.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["isoperimetric_profile*"]
